# dumb-pypi

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml  testing.py
.github/workflows/: ci.yaml  publish-github-pages.yaml
dumb_pypi/: main.py
tests/: conftest.py  integration_test.py  main_test.py
